--- a/team/team.css
+++ b/team/team.css
@@ -1,92 +1,90 @@
-p,a,h1,h2,h3,h4 {
-	margin: 0;
-	padding: 0;
+.our-team{
+  background: #000;
+  text-align: center;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
+  overflow: hidden;
+  position: relative;
 }
-
-.section-team {
-	font-family: "Poppins", sans-serif;
-	padding: 80px 0;
+.our-team img{
+  width: 100%;
+  height: auto;
+  transition: all 0.55s ease 0s;
 }
-
-.section-team .header-section {
-	margin-bottom: 50px;
+.our-team:hover img{ opacity: 0.5; }
+.our-team .team-content{
+  padding: 5px 10px 10px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  opacity: 0;
+  transform: rotate(45deg) translate(-50%, -50%);
+  transform-origin: 0 0;
+  transition: all 0.55s ease 0s;
 }
-
-.section-team .header-section .small-title {
-    margin-bottom: 25px;
-	font-size: 16px;
-    font-weight: 500;
-    color: #3e64ff;
+.our-team:hover .team-content{ opacity: 1; }
+.our-team .team-content:before,
+.our-team .team-content:after{
+  content: "";
+  width: 400px;
+  height: 2px;
+  background: #95ccea;
+  position: absolute;
+  top: 0;
+  left: 10px;
+  transform: translateX(100%);
+  transition: all 0.55s ease 0s;
 }
-
-.section-team .header-section .title {
-    font-weight: 700;
-    font-size: 45px;
+.our-team .team-content:after{
+  top: auto;
+  left: auto;
+  bottom: 0;
+  right: 10px;
+  transform: translateX(-100%);
 }
-
-.section-team .single-person {
-	margin-top: 30px;
-	padding: 30px;
-	background-color: #6b93e29d;
-	border-radius: 5px;
+.our-team:hover .team-content:before,
+.our-team:hover .team-content:after{
+  transform: translate(0, 0);
+  transition-delay: 0.15s;
 }
-
-
-.section-team .single-person .person-image {
-    position: relative;
-    margin-bottom: 50px;
-    border-radius: 100%;
-    border: 4px dashed transparent;
-    transition: padding .3s;
+.our-team .title{
+  font-size: 20px;
+  font-weight: 400;
+  color: #fff;
+  text-transform: uppercase;
+  margin: 0;
 }
-
-.section-team .single-person:hover .person-image {
-	padding: 12px;
-    border: 4px dashed #3b2ad1;
+.our-team .title:before,
+.our-team .title:after{
+  content: "";
+  width: 2px;
+  height: 300px;
+  background: #95ccea;
+  position: absolute;
+  top: 10px;
+  right: 0;
+  transform: translateY(100%);
+  transition: all 0.55s ease 0s;
 }
-
-.section-team .single-person .person-image img {
-	width: 100%;
-    border-radius: 50%;
+.our-team .title:after{
+  top: auto;
+  right: auto;
+  bottom: 10px;
+  left: 0;
+  transform: translateY(-100%);
 }
-
-.section-team .single-person .person-image .icon {
-	position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translate(-50%,50%);
-    display: inline-block;
-    width: 60px;
-    height: 60px;
-    line-height: 60px;
-    text-align: center;
-    background: linear-gradient(to right, #016cec, #00b5f7);
-    color: #fff;
-    border-radius: 50%;
-    font-size: 24px;
+.our-team:hover .title:before,
+.our-team:hover .title:after{
+  transform: translate(0, 0);
 }
-
-.section-team .single-person:hover .person-image .icon {
-	background: none;
-	background-color: #fff;
-	color: #016cec;
+.our-team .post{
+  display: block;
+  padding: 5px 10px;
+  background: #95ccea;
+  font-size: 17px;
+  font-weight: 700;
+  color: #000;
+  text-transform: capitalize;
 }
-
-.section-team .single-person .person-info .full-name {
-	margin-bottom: 10px;
-	font-size: 28px;
-    font-weight: 700;
-    text-align: center;
-}
-
-.section-team .single-person .person-info .speciality {
-    text-transform: uppercase;
-    font-size: 14px;
-    color: #016cec;
-    
-}
-
-.section-team .single-person:hover .full-name,
-.section-team .single-person:hover .speciality {
-	color: #016cec;
+@media only screen and (max-width: 990px){
+  .our-team{ margin-bottom: 30px; }
 }
